--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "watch": "webpack --mode development --watch",
     "build": "webpack",
-    "test": "jest --coverage --testPathPattern=__tests__/index.test.js",
+    "test": "jest --coverage",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "prepublishOnly": "rm -rf dist && npm run build && npm t -- --silent"
   },
