--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^4.3.6",
-    "jest": "^26.6.3",
+    "jest": "^27.0.3",
+    "jest-simple-config": "^0.4.0",
     "prettier": "^2.2.1",
     "webpack": "^5.11.0",
     "webpack-cli": "^4.2.0",
