--- a/package.json
+++ b/package.json
@@ -36,13 +36,13 @@
   "homepage": "https://github.com/helloitsjoe/swipey#readme",
   "devDependencies": {
     "@babel/core": "^7.12.10",
+    "@babel/eslint-parser": "^7.15.0",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@testing-library/dom": "^7.29.0",
-    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "eslint": "^7.16.0",
-    "eslint-config-helloitsjoe": "^1.2.4",
+    "eslint-config-helloitsjoe": "^2.0.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
