--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "watch": "webpack --mode development --watch",
     "build": "webpack",
+    "start": "serve",
     "test": "jest --coverage",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "prepublishOnly": "rm -rf dist && npm run build && npm t -- --silent"
@@ -51,6 +52,7 @@
     "jest": "^27.0.3",
     "jest-simple-config": "^0.4.0",
     "prettier": "^2.2.1",
+    "serve": "^13.0.2",
     "webpack": "^5.11.0",
     "webpack-cli": "^4.2.0",
     "webpack-simple": "^1.7.1"
