--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build": "webpack",
     "start": "serve",
     "test": "jest --coverage",
+    "lint": "eslint .",
+    "format": "prettier --write src",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "prepublishOnly": "rm -rf dist && npm run build && npm t -- --silent"
   },
@@ -43,7 +45,7 @@
     "@testing-library/dom": "^7.29.0",
     "babel-loader": "^8.2.2",
     "eslint": "^7.16.0",
-    "eslint-config-helloitsjoe": "^2.0.0",
+    "eslint-config-helloitsjoe": "^2.0.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
